making installer work with JDK 9