@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>cryptomator-win</artifactId>
-	<version>1.3.3</version>
+	<version>1.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Cryptomator Windows installer</name>
 
 	<properties>
 		<cryptomator.launcher.version>${project.version}</cryptomator.launcher.version>
-		<javafx.tools.ant.jar>${java.home}/../lib/ant-javafx.jar</javafx.tools.ant.jar>
+		<javafx.tools.ant.jar>${java.home}/lib/ant-javafx.jar</javafx.tools.ant.jar>
 	</properties>
 
 	<dependencies>
@@ -19,110 +20,6 @@
 			<version>${cryptomator.launcher.version}</version>
 		</dependency>
 	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>x86</id>
-			<activation>
-				<property>
-					<name>sun.arch.data.model</name>
-					<value>32</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.coderplus.maven.plugins</groupId>
-						<artifactId>copy-rename-maven-plugin</artifactId>
-						<version>1.0.1</version>
-						<executions>
-							<execution>
-								<id>copy-x86-dll</id>
-								<phase>process-resources</phase>
-								<goals>
-									<goal>copy</goal>
-								</goals>
-								<configuration>
-									<sourceFile>${project.basedir}/package/windows/WinFunctions-x86.dll</sourceFile>
-									<destinationFile>${project.build.directory}/libs/WinFunctions.dll</destinationFile>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.6.0</version>
-						<executions>
-							<execution>
-								<id>run-inno-setup-x86</id>
-								<phase>package</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>C:\Program Files (x86)\Inno Setup 5\ISCC.exe</executable>
-									<workingDirectory>${project.build.directory}/bundles</workingDirectory>
-									<commandlineArgs>setup-x86.iss /sdefault="signtool $p"</commandlineArgs>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>x64</id>
-			<activation>
-				<property>
-					<name>sun.arch.data.model</name>
-					<value>64</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.coderplus.maven.plugins</groupId>
-						<artifactId>copy-rename-maven-plugin</artifactId>
-						<version>1.0.1</version>
-						<executions>
-							<execution>
-								<id>copy-x64-dll</id>
-								<phase>process-resources</phase>
-								<goals>
-									<goal>copy</goal>
-								</goals>
-								<configuration>
-									<sourceFile>${project.basedir}/package/windows/WinFunctions-x64.dll</sourceFile>
-									<destinationFile>${project.build.directory}/libs/WinFunctions.dll</destinationFile>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.6.0</version>
-						<executions>
-							<execution>
-								<id>run-inno-setup-x64</id>
-								<phase>package</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>C:\Program Files (x86)\Inno Setup 5\ISCC.exe</executable>
-									<workingDirectory>${project.build.directory}/bundles</workingDirectory>
-									<commandlineArgs>setup-x64.iss /sdefault="signtool $p"</commandlineArgs>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 	<build>
 		<plugins>
@@ -164,6 +61,11 @@
 									<exclude>*.iss</exclude>
 									<filtering>false</filtering>
 								</resource>
+								<resource>
+									<directory>${project.basedir}/package/windows</directory>
+									<include>WinFunctions.dll</include>
+									<filtering>false</filtering>
+								</resource>
 							</resources>
 						</configuration>
 					</execution>
@@ -181,44 +83,50 @@
 						</goals>
 						<configuration>
 							<target name="create-exe" xmlns:fx="javafx:com.sun.javafx.tools.ant">
-								<taskdef uri="javafx:com.sun.javafx.tools.ant" resource="com/sun/javafx/tools/ant/antlib.xml" classpath="${project.basedir}:${javafx.tools.ant.jar}" />
+								<taskdef uri="javafx:com.sun.javafx.tools.ant" resource="com/sun/javafx/tools/ant/antlib.xml" classpath="${project.basedir}:${javafx.tools.ant.jar}"/>
 
 								<!-- Define application to build -->
-								<fx:application id="Cryptomator" name="Cryptomator" version="${project.version}" mainClass="org.cryptomator.launcher.Cryptomator" />
+								<fx:application id="Cryptomator" name="Cryptomator" version="${project.version}" mainClass="org.cryptomator.launcher.Cryptomator"/>
 
 								<!-- Create main application jar -->
 								<fx:jar destfile="${project.build.directory}/Cryptomator-${project.version}.jar">
-									<fx:application refid="Cryptomator" />
-									<fx:fileset dir="${project.build.directory}/libs" includes="launcher-${cryptomator.launcher.version}.jar" />
+									<fx:application refid="Cryptomator"/>
+									<fx:fileset dir="${project.build.directory}/libs" includes="launcher-${cryptomator.launcher.version}.jar"/>
 									<fx:resources>
-										<fx:fileset dir="${project.build.directory}/libs" type="jar" includes="*.jar" excludes="launcher-${cryptomator.launcher.version}.jar" />
+										<fx:fileset dir="${project.build.directory}/libs" type="jar" includes="*.jar" excludes="launcher-${cryptomator.launcher.version}.jar"/>
 									</fx:resources>
 									<fx:manifest>
-										<fx:attribute name="Implementation-Vendor" value="cryptomator.org" />
-										<fx:attribute name="Implementation-Title" value="Cryptomator" />
-										<fx:attribute name="Implementation-Version" value="${project.version}" />
+										<fx:attribute name="Implementation-Vendor" value="cryptomator.org"/>
+										<fx:attribute name="Implementation-Title" value="Cryptomator"/>
+										<fx:attribute name="Implementation-Version" value="${project.version}"/>
 									</fx:manifest>
 								</fx:jar>
 
 								<!-- Create native package -->
-								<fx:deploy nativeBundles="image" outdir="${project.build.directory}" verbose="true">
-									<fx:application refid="Cryptomator" />
+								<fx:deploy nativeBundles="image" outdir="${project.build.directory}/bundles" verbose="true">
+									<fx:application refid="Cryptomator"/>
 									<fx:info title="Cryptomator" vendor="cryptomator.org" copyright="cryptomator.org" license="MIT" category="Utility">
-										<fx:association mimetype="application/x-vnd.cryptomator-vault-metadata" extension="cryptomator" description="Cryptomator Vault Metadata" />
+										<fx:association mimetype="application/x-vnd.cryptomator-vault-metadata" extension="cryptomator" description="Cryptomator Vault Metadata"/>
 									</fx:info>
+									<fx:runtime>
+										<fx:add-modules value="jdk.incubator.httpclient"/>
+									</fx:runtime>
 									<fx:platform javafx="2.2+" j2se="8.0">
-										<fx:property name="logback.configurationFile" value="logback.xml" />
-										<fx:property name="cryptomator.settingsPath" value="~/AppData/Roaming/Cryptomator/settings.json" />
-										<fx:property name="cryptomator.keychainPath" value="~/AppData/Roaming/Cryptomator/keychain.json" />
-										<fx:property name="cryptomator.ipcPortPath" value="~/AppData/Roaming/Cryptomator/ipcPort.bin" />
-										<fx:jvmarg value="-Xmx512m" />
+										<fx:property name="logback.configurationFile" value="logback.xml"/>
+										<fx:property name="cryptomator.settingsPath" value="~/AppData/Roaming/Cryptomator/settings.json"/>
+										<fx:property name="cryptomator.keychainPath" value="~/AppData/Roaming/Cryptomator/keychain.json"/>
+										<fx:property name="cryptomator.ipcPortPath" value="~/AppData/Roaming/Cryptomator/ipcPort.bin"/>
+										<fx:jvmarg value="-Xmx512m"/>
+										<fx:jvmarg value="--add-modules"/>
+										<fx:jvmarg value="jdk.incubator.httpclient"/>
 									</fx:platform>
 									<fx:resources>
-										<fx:fileset dir="${project.basedir}" type="data" includes="logback.xml" />
-										<fx:fileset dir="${project.build.directory}" type="jar" includes="Cryptomator-${project.version}.jar" />
-										<fx:fileset dir="${project.build.directory}/libs" type="jar" includes="*.jar" excludes="launcher-${cryptomator.launcher.version}.jar" />
-										<fx:fileset dir="${project.build.directory}/libs" type="data" includes="*.dll" />
+										<fx:fileset dir="${project.basedir}" type="data" includes="logback.xml"/>
+										<fx:fileset dir="${project.build.directory}" type="jar" includes="Cryptomator-${project.version}.jar"/>
+										<fx:fileset dir="${project.build.directory}/libs" type="jar" includes="*.jar" excludes="launcher-${cryptomator.launcher.version}.jar"/>
+										<fx:fileset dir="${project.build.directory}/libs" type="data" includes="*.dll"/>
 									</fx:resources>
+									<fx:bundleArgument arg="dropinResourcesRoot" value="."/>
 								</fx:deploy>
 							</target>
 						</configuration>
@@ -231,67 +139,10 @@
 						</goals>
 						<configuration>
 							<target xmlns="antlib:org.apache.tools.ant">
-								<echo message="Deleting unnecessary libraries from bundled JRE." />
+								<echo message="Deleting unnecessary libraries from bundled JRE."/>
 								<delete verbose="true">
-									<fileset dir="${project.build.directory}/bundles/Cryptomator/runtime/lib/ext">
-										<include name="nashorn.jar" />
-									</fileset>
 									<fileset dir="${project.build.directory}/bundles/Cryptomator/runtime/bin">
-										<include name="JAWTAccessBridge-64.dll" />
-										<include name="JavaAccessBridge-64.dll" />
-										<include name="WindowsAccessBridge-64.dll" />
-										<include name="attach.dll" />
-										<include name="bci.dll" />
-										<include name="dcpr.dll" />
-										<include name="decora_sse.dll" />
-										<include name="deploy.dll" />
-										<include name="dt_shmem.dll" />
-										<include name="dt_socket.dll" />
-										<include name="fxplugins.dll" />
-										<include name="glib-lite.dll" />
-										<include name="gstreamer-lite.dll" />
-										<include name="hprof.dll" />
-										<include name="instrument.dll" />
-										<include name="j2pcsc.dll" />
-										<include name="j2pkcs11.dll" />
-										<include name="jaas_nt.dll" />
-										<include name="java_crw_demo.dll" />
-										<include name="javafx_font_t2k.dll" />
-										<include name="javafx_iio.dll" />
-										<include name="jawt.dll" />
-										<include name="jdwp.dll" />
-										<include name="jfr.dll" />
-										<include name="jfxmedia.dll" />
-										<include name="jfxwebkit.dll" />
-										<include name="jli.dll" />
-										<include name="jpeg.dll" />
-										<include name="jsdt.dll" />
-										<include name="jsound.dll" />
-										<include name="jsoundds.dll" />
-										<include name="kcms.dll" />
-										<include name="lcms.dll" />
-										<include name="management.dll" />
-										<include name="mlib_image.dll" />
-										<include name="msvcp120.dll" />
-										<include name="msvcr100.dll" />
-										<include name="msvcr120.dll" />
-										<include name="npt.dll" />
-										<include name="prism_d3d.dll" />
-										<include name="resource.dll" />
-										<include name="sawindbg.dll" />
-										<include name="splashscreen.dll" />
-										<include name="sunec.dll" />
-										<include name="t2k.dll" />
-										<include name="unpack.dll" />
-										<include name="w2k_lsa_auth.dll" />
-									</fileset>
-									<fileset dir="${project.build.directory}/bundles/Cryptomator/runtime/bin/plugin2">
-										<include name="npjp2.dll" />
-										<include name="msvcr100.dll" />
-									</fileset>
-									<!-- TODO: x86 JVM has different dir layout... (client/classes.jsa?) -->
-									<fileset dir="${project.build.directory}/bundles/Cryptomator/runtime/bin/server">
-										<include name="classes.jsa" />
+										<include name="jfxwebkit.dll"/>
 									</fileset>
 								</delete>
 							</target>
@@ -314,6 +165,18 @@
 							<executable>attrib</executable>
 							<workingDirectory>${project.build.directory}/bundles/Cryptomator</workingDirectory>
 							<commandlineArgs>-r /s</commandlineArgs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>run-inno-setup-x64</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>C:\Program Files (x86)\Inno Setup 5\ISCC.exe</executable>
+							<workingDirectory>${project.build.directory}/bundles</workingDirectory>
+							<commandlineArgs>setup.iss /sdefault="signtool $p"</commandlineArgs>
 						</configuration>
 					</execution>
 				</executions>
